[package]
name = "the_quiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
rand = "0.8.5"
ctrlc = "3.2.2"
crossterm = "0.24.0"
serde = { version = "*", features = ["derive"] }
reqwest = { version = "*", features = ["blocking", "json"] }
